--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/ua-parser-js": "^0.7.39",
     "@types/validator": "^13.12.2",
     "bcryptjs": "^2.4.3",
@@ -41,6 +42,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
+    "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.7.8",
     "nodemailer-sendgrid": "^1.0.3",
     "passport": "^0.7.0",
